glib-macros/tests/closure_compiletest/15-closure-upgrade-or-else-with-param.rs
fn main() {
    use glib::closure;
    let v = std::rc::Rc::new(1);
    closure!(#[upgrade_or_else] |x| lol, #[strong] v, move || {println!("foo");});
}
